<resources>
    <string name="app_name">Scan Verify</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_fav_popular">Popular</string>
    <string name="menu_title_fav_videos">Favourite</string>
    <string name="menu_title_my_videos">Me</string>
    <string name="menu_title_profile">Profile</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about_event">About Event</string>
    <string name="menu_inquiry_event">Inquiry For Event</string>
    <string name="menu_my_events">My Events</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_term_condition">Term of Use</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_my_video">My Video</string>
    <string name="menu_my_audio">My Audio</string>
    <string name="label_setting_change_pass">Change Password</string>
    <string name="label_setting_push">Push Notification</string>
    <string name="label_login">Login</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_not_registered_yet">Not register yet?</string>
    <string name="label_old_password">Old Password</string>
    <string name="label_new_password">New Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_user_details">User Details</string>
    <string name="label_update">Update</string>
    <string name="label_register">Register</string>
    <string name="label_user_name">User Name</string>
    <string name="label_mobile">Mobile</string>
    <string name="label_address">Address</string>
    <string name="label_dob"> Date Of Birth</string>
    <string name="label_gender">Gender</string>
    <string name="label_height">Height</string>
    <string name="label_about">About Yourself</string>
    <string name="label_eligible">Eligibility</string>
    <string name="label_my_talent">My Talent</string>
    <string name="label_title">Title</string>
    <string name="label_category">Category</string>
    <string name="label_video_url">Video Link</string>
    <string name="label_youtube_url">YouTube Link</string>
    <string name="label_short_desc">Short Description</string>
    <string name="label_long_desc">Description</string>
    <string name="label_add_thumbnail">Add Image</string>
    <string name="label_varify_otp">Varify OTP</string>
    <string name="label_generate_otp">Generate OTP</string>
    <string name="label_enter_otp">Enter OTP</string>
    <string name="label_otp"> OTP</string>
    <string name="label_enter_phone">Enter Phone</string>
    <string name="btn_register_now">Register Now</string>
    <string name="btn_forgot_pass">Forgot Password?</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_done">Done</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="label_gender_select">Select your gender</string>
    <string name="msg_profile_updated">Profile updated successfully.</string>
    <string name="msg_video_updated">Video updated successfully.</string>
    <string name="label_category_select">Select any category</string>
    <string name="msg_profile_pic_update_issue">Unable to upload profile pic.</string>
    <string name="no_internet">Please check your internet connection.</string>
    <string name="msg_loading_data">Please have a patience and relax, while we are getting data for you.</string>
    <string name="msg_no_data_found">There are no data for you right now. Please wait or check after some time.</string>
    <string name="msg_no_fav_data_found">You have not mark any post favourite yet. Please favourite any post to see the data here.</string>
    <string name="msg_no_self_data_found">You have not posted any video yet. Please post any video or other post as per your Talent.</string>
    <string name="msg_no_event_data_found">There are no event found near by you. Please reset the filter or try after some time.</string>
    <string name="msg_dialog_change_pass">Your password has bees changed successfully. Please login again to use the app.</string>
    <string name="msg_dialog_forgot_pass">An email has been send to your email id. Please follow the steps to reset the password.</string>
    <string name="msg_dialog_email_not_verified">You have not verified the email link, send to your registered email id. Please verify it to complete the registration process. If not received the email yet, check your spam also.</string>
    <string name="msg_dialog_register_user">An email has been send to your email id. Also check your spam and verify the link to complete your registration process.</string>
    <string name="msg_enter_user_name">Please enter the user name.</string>
    <string name="msg_enter_mobile_number">Please enter the mobile number.</string>
    <string name="msg_enter_valid_mobile_number">Please enter valid mobile number.</string>
    <string name="msg_enter_gender">Please select your gender.</string>
    <string name="msg_enter_address">Please enter the communication address.</string>
    <string name="msg_enter_about_yourself">Please write something about you.</string>
    <string name="msg_enter_old_pass">Please enter old password.</string>
    <string name="msg_enter_new_pass">Please enter new password.</string>
    <string name="msg_enter_confirm_pass">Confirm password not matched.</string>
    <string name="msg_enter_email_id">Please enter the email id.</string>
    <string name="msg_enter_password">Please enter the password.</string>
    <string name="msg_length_password">Password length should be more then 6.</string>
    <string name="msg_enter_title">Please enter title.</string>
    <string name="msg_enter_category">Please select video category.</string>
    <string name="msg_enter_short_desc">Please enter short description.</string>
    <string name="msg_enter_long">Please enter long description.</string>
    <string name="msg_enter_video_url">Please enter any video link.</string>
    <string name="msg_enter_thumbnail">Please add a thumbnail.</string>
    <string name="edit">Edit Post</string>
    <string name="delete">Delete Post</string>
    <string name="select_image">Select Image</string>
    <string name="select_camera">Camera</string>
    <string name="select_gallery">Gallery</string>
    <string name="label_view_videos">View Videos</string>
    <string name="btn_save_profile">Save Profile</string>
    <string name="report_user">Report User</string>
    <string name="report_video">Report Post</string>
    <string name="label_video_detail">Video Detail</string>
    <string name="msg_fav_success">Post added to favourite list.</string>
    <string name="msg_un_fav_success">Post removed from favourite list.</string>
    <string name="msg_like_success">Post marked as Like.</string>
    <string name="msg_unlike_success">Post marked as unlike.</string>
    <string name="msg_report_user_success">Your report for user will be reviewed by admin soon.</string>
    <string name="msg_report_video_success">Your report for video will be reviewed by admin soon.</string>
    <string name="msg_love_success">Post mark as Love.</string>
    <string name="msg_unlove_success">Post removed from Love.</string>
    <string name="msg_post_deleted">Your post deleted successfully.</string>
    <string name="msg_apply_event">You are registered to selected event.</string>
    <string name="msg_remove_applid_event">Your are unregister from selected event.</string>
    <string name="msg_user_inappropriate">User is inappropriate.</string>
    <string name="msg_user_video_inappropriate">User video is inappropriate.</string>
    <string name="msg_event_inappropriate">Event is inappropriate.</string>
    <string name="msg_event_inappropriate_desc">Event is inappropriate marked by user. Need to review with event organisers.</string>
    <string name="msg_event_report_success">You have successfully reported for Event. Admin will review your report.</string>
    <string name="upload">Save</string>
    <string name="video">Video</string>
    <string name="search">Search by user name or video title</string>
    <string name="search_event">Search event name</string>
    <string name="msg_please_wait">Please wait…</string>
    <string name="msg_upload_success">Image uploaded successfully.</string>
    <string name="msg_token_fmt">Push Notification : %s</string>
    <string name="txt_love">Love</string>
    <string name="txt_like">Like</string>
    <string name="txt_version">Version</string>
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="category_list">
        <item>Audio</item>
        <item>Video</item>
        <item>None</item>
    </string-array>
    <string-array name="event_filter_list">
        <item>All Event</item>
        <item>Only Applied Event</item>
        <item>Only New Event</item>
    </string-array>
    <string name="tutorial_title_one">Group Music</string>
    <string name="tutorial_desc_one">Share your group or solo music performance globally</string>
    <string name="tutorial_title_two">Dance is hobby</string>
    <string name="tutorial_title_three">Make your voice</string>
    <string name="msg_forgot_password">Please enter your register phone number to get the new password.</string>
    <string name="msg_otp">Please enter your OTP received on your phone.</string>
    <string name="label_next">Next</string>
    <string name="label_back">Back</string>
    <string name="label_finish">Finish</string>
    <string name="bio_login_btn">Biometric Login</string>
    <string name="msg_use_finger">Please use biometric scanner for secure login into app</string>
    <string name="biometric_title">Biometric Authentication</string>
    <string name="biometric_sub_title">Your app is secure with biometric scan.</string>
    <string name="biometric_password">Use account password</string>
    <string name="retry">Retry</string>
    <string name="label_setting_secure_enable">Secure Login</string>
    <string name="lable_share_with">Choose app to share</string>
    <string name="msg_share_app">Hey! Use this app to share your hidden talent to world.</string>
    <string name="organiser_detail">Organiser Detail</string>
    <string name="event_detail">Event Detail</string>
    <string name="check_new_event_title">✨ Checkout New Event</string>
    <string name="txt_apply">Apply</string>
    <string name="txt_already_apply">Applied</string>
    <string name="label_events">Events</string>
    <string name="label_report_event">Report Event</string>
    <string name="label_web_site">Web Site</string>
    <string name="label_phone">Phone</string>
    <string name="organiser_web_site">Organiser Web Site</string>
    <string name="msg_empty_organisor_event_list">There are no event organised by you. Please contact admin to organise an Event.</string>
    <string name="msg_no_event_applicant_found">There are no applicant found for event.</string>
</resources>