<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signinParentLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_d5d5d5"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_40">

        <View
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_marginTop="@dimen/dp_40"
            android:contentDescription="@string/app_name"
            android:src="@drawable/login_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_50"
            android:elevation="@dimen/dp_10"
            app:cardCornerRadius="@dimen/dp_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_20">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_login"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/sp_20"
                        android:textStyle="bold" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        android:hint="@string/label_phone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phoneEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:lines="1"
                            android:maxLength="@integer/max_phone"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        android:hint="@string/label_password"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLength="@integer/max_pass" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/forgotPassBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/btn_forgot_pass" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/loginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_30"
                        android:layout_marginBottom="@dimen/dp_20"
                        android:elevation="@dimen/dp_10"
                        app:cardCornerRadius="@dimen/dp_30">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/dp_20"
                            android:text="@string/btn_submit"
                            android:textColor="@color/colorBlack" />
                    </androidx.cardview.widget.CardView>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/dp_10"
                            android:text="@string/label_not_registered_yet" />

                        <TextView
                            android:id="@+id/registerBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_register_now"
                            android:textColor="@color/colorBlack" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout android:id="@+id/loginProgressLyt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_centerInParent="true"
                    android:visibility="gone">

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="@dimen/dp_50"
                        android:minHeight="@dimen/dp_50" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_20"
                        android:textSize="@dimen/sp_20"
                        android:textColor="@color/colorAccent"
                        android:text="@string/msg_please_wait"/>
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>